# myrepetl

./: .gitignore  ARCHITECTURE.md  CONNECTION_MANAGEMENT.md  Dockerfile  INIT_BATCH_PROCESSING.md  INSTALL.md  LICENSE  LOGGING.md  MANIFEST.in  METRICS.md  Makefile  PACKAGE.md  QUICKSTART.md  README.md  TRANSFORMS.md  __init__.py  cli.py  demo.py  docker-compose.57.yaml  docker-compose.monitoring.yaml  docker-compose.yml  dsl.py  engine.py  habr_post.md  habr_post_en.md  pyproject.toml  pytest.ini  replication.py  requirements.txt  setup.py  test_connection.py  utils.py
configs/: demo_pipeline.json  demo_pipeline.yaml
examples/: README.md  advanced_example.py  basic_example.py  batch_config_example.json  health_check_example.py  init_batch_config_example.json  metrics_config_example.json  multi_source_example.py  sample_config.py
grafana/: README.md  alertmanager.yml  docker-compose.yml  myrepetl-alerts.yml  myrepetl-dashboard.json  myrepetl-health-dashboard.json  prometheus.yml  setup-monitoring.sh
kube/: source_init.sql  target_init.sql
myrepetl/: __init__.py  cli.py  etl_service.py  exceptions.py
myrepetl/models/: __init__.py  events.py  transforms.py
myrepetl/services/: replication_service.py
myrepetl/utils/: __init__.py  logger.py  retry.py  sql_builder.py
src/: README.md  __init__.py  cli.py  etl_service.py  exceptions.py  transform.py
src/models/: config.py  events.py
src/services/: README.md  __init__.py  config_service.py  database_service.py  filter_service.py  init_query_thread_service.py  message_bus.py  metrics_endpoint.py  metrics_service.py  replication_service.py  source_thread_service.py  target_thread_service.py  thread_manager.py  transform_service.py
src/utils/: logger.py
tests/: README.md  __init__.py  test_dsl.py
tests/integration/: __init__.py  test_filter_integration.py  test_full_pipeline.py  test_init_query.py
tests/unit/: __init__.py  test_etl_service.py  test_filter_service.py  test_message_bus.py  test_models.py  test_services.py  test_source_thread_service.py  test_target_thread_service.py  test_thread_manager.py  test_utils.py
